hphp/test/slow/class_level_where_clauses/class_level_where_clauses_disabled.php.expectf
Fatal error: Cannot use unstable feature: `class_level_where` in %s on line 12
